@@ -1,0 +1,43 @@
+List of Commands
+by zax
+
+All components with of a specific ctype respond to the following commands.
+If a command directly initiates an action, that action is noted just for reference.
+Some commands do cause actions indirectly, such as setting the speed of an engine to
+a non-zero number will cause the object to move.
+
+Version 1
+
+FixedGun
+    FIRE: Fires the gun in the direction that the object is facing. Has no facing of its own.
+        
+        'command': 'FIRE' 
+        action: 'HIGHSPEED_PROJECTILE'
+
+    RELOAD: Begins the reloading process.
+        
+        'command': 'RELOAD'
+        action: None
+
+Engine
+    SET_SPEED: Sets the speed of the engine. Speed must be within ['min_speed','max_speed'].
+        
+        'command': 'SET_SPEED'
+        'speed': <Real number>
+        action: None
+    
+    SET_TURNRATE: Sets the turnrate of the engine. 
+        Turnrate must be withing['min_turnrate','max_turnrate']
+
+        'command':'SET_TURNRATE'
+        'turnrate': <Read number>
+        action: None
+
+Scanner
+    SCAN: Initiates a one-time scan of the environment.
+
+        'command':'SCAN'
+        action: 'SCAN'
+
+
+        
