@@ -18,14 +18,14 @@
         "sides": {
             "blue" : {
                 "starting_locations": [
-                    [0,0],[0,1],[0,2],[0,3],[0,4],[0,5],[0,6],[0,7],[0,8],[0,9],
-                    [0,10],[0,11],[0,12],[0,13],[0,14],[0,15],[0,16],[0,17],[0,18],[0,19]
+                    [1,1],[1,2],[1,3],[1,4],[1,5],[1,6],[1,7],[1,8],[1,9],
+                    [1,10],[1,11],[1,12],[1,13],[1,14],[1,15],[1,16],[1,17],[1,18]
                 ]
             },
             "red" : {
                 "starting_locations": [
-                    [19,0],[19,1],[19,2],[19,3],[19,4],[19,5],[19,6],[19,7],[19,8],[19,9],
-                    [19,10],[19,11],[19,12],[19,13],[19,14],[19,15],[19,16],[19,17],[19,18],[19,19]
+                    [18,1],[18,2],[18,3],[18,4],[18,5],[18,6],[18,7],[18,8],[18,9],
+                    [18,10],[18,11],[18,12],[18,13],[18,14],[18,15],[18,16],[18,17],[18,18]
                 ]
             }
         }
@@ -40,14 +40,14 @@
         "sides": {
             "blue" : {
                 "starting_locations": [
-                    [0,0],[0,1],[0,2],[0,3],[0,4],[0,5],[0,6],[0,7],[0,8],[0,9],
-                    [0,10],[0,11],[0,12],[0,13],[0,14],[0,15],[0,16],[0,17],[0,18],[0,19]
+                    [1,1],[1,2],[1,3],[1,4],[1,5],[1,6],[1,7],[1,8],[1,9],
+                    [1,10],[1,11],[1,12],[1,13],[1,14],[1,15],[1,16],[1,17],[1,18]
                 ]
             },
             "red" : {
                 "starting_locations": [
-                    [19,0],[19,1],[19,2],[19,3],[19,4],[19,5],[19,6],[19,7],[19,8],[19,9],
-                    [19,10],[19,11],[19,12],[19,13],[19,14],[19,15],[19,16],[19,17],[19,18],[19,19]
+                    [18,1],[18,2],[18,3],[18,4],[18,5],[18,6],[18,7],[18,8],[18,9],
+                    [18,10],[18,11],[18,12],[18,13],[18,14],[18,15],[18,16],[18,17],[18,18]
                 ]
             }
         }
