@@ -32,35 +32,38 @@ def distance(x0,y0,x1,y1):
 #       passed down through several of my projects and I've lost the
 #       original citation. Hats off to whomever wrote it.
 def getCellsAlongTrajectory(x,y,angle,distance):
+
     A=(x,y)
     B=translatePoint(x,y,angle,distance)
+    B = (int(B[0]),int(B[1]))
+
     D = (B[0]-A[0],B[1]-A[1])
     S = (sign(D[0]),sign(D[1]))
     GA = (math.floor(A[0]),math.floor(A[1]))
     GB = (math.floor(B[0]),math.floor(B[1]))
-    (x,y) = GA
+    (dx,dy) = GA
 
     traversed = [GA]
 
-    tIx = D[1] * (x + S[0] - A[0])
-    tIy = D[0] * (y + S[1] - A[1])
+    tIx = D[1] * (dx + S[0] - A[0])
+    tIy = D[0] * (dy + S[1] - A[1])
 
     if(D[0]==0):
         tIx = float('+inf')
     if(D[1]==0):
         tIy = float('+inf')
 
-    while (x,y) != GB:
+    while (dx,dy) != GB:
         movx = abs(tIx) <= abs(tIy)
         movy = abs(tIy) <= abs(tIx)
 
         if movx:
-            x += S[0]
-            tIx = D[1] * (x + S[0] - A[0])
+            dx += S[0]
+            tIx = D[1] * (dx + S[0] - A[0])
         if movy:
-            y += S[1]
-            tIy = D[0] * (y + S[1] - A[1])
+            dy += S[1]
+            tIy = D[0] * (dy + S[1] - A[1])
 
-        traversed.append((x,y))
+        traversed.append((dx,dy))
 
     return traversed
